airr-react/css/airr-react.css
/************* AIRR STRUCTURE STYLES ***************/
* {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    -webkit-appearance: none;
}

*::-webkit-scrollbar {
    display: none;
}

:after, :before {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

html, body, p, h1, h2, h3, h4, h5, h6, div, span, ul, li, a, input, textarea, button {
    margin: 0;
    padding: 0;
    font-size: 100%;
}

html, body {
    background: #fff;
    overflow: hidden;
    width: 100%;
    height: 100%;
    font-size: 100%;
    -webkit-font-smoothing: antialiased;
}

canvas {
    touch-action-delay: none;
    touch-action: none;
    -ms-touch-action: none;
}

body {
    -webkit-touch-callout: none; /* prevent callout to copy image, etc when tap to hold */
    -webkit-text-size-adjust: none; /* prevent webkit from resizing text to fit */
    -webkit-user-select: none; /* prevent copy paste, to allow, change 'none' to 'text' */
}

.airr-blank-mask {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    z-index: 110;
}

.airr-mayer {
    position: absolute;
    top: 0;
    right: 0;
    left: 0;
    bottom: 0;
    z-index: 109;

    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;

    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;

    -webkit-box-orient: vertical !important;
    -ms-flex-direction: column !important;
    flex-direction: column !important;

    display: flex;
    display: -webkit-box;
    display: -ms-flexbox;
}
.airr-mayer .bg {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(240, 240, 210, 0.7);
}
.airr-mayer .ctn {
    background-color: #fff;
    padding: 2rem;
    position: relative;
    width: 100%;
}

.airr-mayer.full .ctn {
    overflow: scroll;
}

.airr-mayer.full .btns {
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    padding: .3rem;
    background: rgba(255, 255, 255, 0.5);
}

.airr-mayer.full .ctn > div.text {
    padding-bottom: 3.75rem;
}

.airr-mayer .btns {
    padding-top: 1rem;
    overflow: auto;
}

.airr-mayer .btns button {
    padding: 0.5rem 1.5rem;
    background-color: #000;
    color: #fff;
    height: auto;
    margin-top: 0.3rem;
}

.airr-mayer .btns button:active {
    background-color: #fff !important;
    color: #000;
}

.airr-mayer .btns button:last-child {
    float: right;
}

textarea:focus, input:focus {
    outline: none;
}

*:focus {
    outline: none;
}

.hidden {
    display: none;
}

.airr-view,
.airr-container {
    height: 100%;
    width: 100%;
    overflow: hidden;
    position: relative;
}

.airr-container > .airr-view {
    display: none;
    overflow: scroll;
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
    -webkit-perspective: 1000px;
    perspective: 1000px;
}

.airr-container > .airr-view.airr-scene {
    overflow: hidden;
}

.airr-container > .airr-view.active {
    display: block;
}

.airr-sidepanel {
    position: absolute;
    z-index: 105;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(0, 0, 0, 0.0);
    display: none;
}

.airr-sidepanel > div:first-child {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgb(0, 0, 0);
    opacity: 0;
}

.airr-sidepanel > div:last-child {
    background-color: #fff;
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
    -webkit-perspective: 1000px;
    overflow: scroll;
    perspective: 1000px;
}

.airr-container.fade-animation > .airr-view,
.airr-container.overlay-animation > .airr-view {
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    z-index: 100;
}

.airr-container.fade-animation > .airr-view.active,
.airr-container.overlay-animation > .airr-view.active {
    z-index: 101;
    opacity: 1;
}

.airr-container.slide-animation > .airr-view {
    float: left;
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
    -webkit-perspective: 1000px;
    perspective: 1000px;
}

.airr-navbar {
    display: -webkit-flex;
    display: flex;
    -webkit-align-items: center;
    align-items: center;
    -webkit-justify-content: center;
    justify-content: center;    
    position: relative;
    z-index: 10;
}
.airr-navbar .back {
    width: 3rem;
    height: 100%;
    position: absolute;
    left: 0;
    top: 0;
}
.airr-navbar .back div {
    height: 100%;
}
.airr-navbar .menu {
    width: 3rem;
    height: 100%;
    position: absolute;
    right: 0;
    top: 0;
}
.airr-navbar .menu div {
    height: 100%;
}
.airr-navbar .new-title {
    position: absolute;
    opacity: 0;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    display: -webkit-flex;
    display: flex;
    -webkit-align-items: center;
    align-items: center;
    -webkit-justify-content: center;
    justify-content: center;        
}
.airr-navbar .title,
.airr-navbar .new-title {
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;    
}

